--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ aioredis = "^2.0.1"
 redis = "^5.0.8"
 motor = "^3.5.1"
 loguru = "^0.7.2"
+numpy = "^2.1.1"
+pyyaml = "^6.0.2"
 
 
 [build-system]
