--- a/src/conf/local.yml
+++ b/src/conf/local.yml
@@ -14,3 +14,10 @@ mongo:
   db: ai_memory
   user: mongoadmin
   passwd: OLmongo2024
+
+redis:
+  ip: localhost
+  port: 27017
+  db: ai_memory
+  user: mongoadmin
+  passwd: OLmongo2024
